page gutter variables. navbar align. team bug fixed

--- a/idlecars/static/css/main.css
+++ b/idlecars/static/css/main.css
@@ -35,7 +35,7 @@
       margin-right: 24px; }
       .about-page .team-cities-careers .profile-image img {
         height: 125px; }
-    .about-page .team-cities-careers .description p:first-child {
+    .about-page .team-cities-careers .description .bold {
       margin-bottom: 18px; }
     .about-page .team-cities-careers .cities img {
       width: 100%;
@@ -77,10 +77,12 @@
     margin-bottom: 48px; }
     .about-page .team-cities-careers .topics h3 {
       width: 100%;
-      text-align: left; }
+      text-align: left;
+      padding-bottom: 0; }
       .about-page .team-cities-careers .topics h3 span {
         float: right;
-        font-size: 40px; }
+        font-size: 40px;
+        font-family: inherit; }
   .about-page .team-cities-careers .pane {
     flex-direction: column;
     -webkit-flex-direction: column;
@@ -146,7 +148,7 @@ section {
   .button:hover {
     opacity: 0.9; }
 
-.button, input {
+.button, input, textarea {
   border-radius: 0; }
 
 .mobile, #mobile {
@@ -187,7 +189,7 @@ section {
   display: flex;
   display: -webkit-flex; }
 
-.about-page .team-cities-careers .topics div, .flex-cell, .navbar .links, .navbar a {
+.about-page .team-cities-careers .topics div, .flex-cell, .about-page .team-cities-careers .description {
   flex: 1;
   -ms-flex: 1;
   -webkit-flex: 1; }
@@ -405,30 +407,31 @@ footer {
   background: black;
   z-index: 9999; }
   .navbar .logo {
-    height: 3rem;
+    height: 48px;
     max-width: 65rem;
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 48px;
     margin: 0 auto; }
   .navbar img {
     height: 2rem; }
   .navbar .links {
     position: absolute;
     top: 0;
-    right: 2rem;
-    height: 3rem;
-    width: 35rem;
-    padding: 0.5rem 0; }
-  .navbar a {
-    text-align: center; }
-  .navbar h5 {
-    font-weight: 500; }
+    right: 48px;
+    height: 48px; }
+    .navbar .links a {
+      display: inline-block;
+      margin: 0 25px; }
+      .navbar .links a:first-of-type {
+        margin-left: 0; }
+      .navbar .links a:last-of-type {
+        margin-right: 0; }
   .navbar .menu-button {
     display: none;
     cursor: pointer;
     position: relative;
     left: calc(100% - 2.75rem);
     width: 2.75rem;
-    height: 3rem; }
+    height: 48px; }
   .navbar .menu-container {
     background-color: black;
     width: 100%;
@@ -436,10 +439,9 @@ footer {
     .navbar .menu-container a {
       display: block;
       text-align: right;
-      padding: 0.5rem 0;
-      font-weight: 300; }
+      padding: 0.5rem 0; }
 
-@media (max-width: 875px) {
+@media (max-width: 800px) {
   .navbar {
     display: block; }
     .navbar .logo {
